  * Fixed GenBank parsing to be more forgiving of different LOCUS lines output by other programs.
    Now only gives a warning if the sequence length is missing and looks for the linear|circular
    designation at different locations within the LOCUS line. Falls back to the source feature
    length if the sequence length is missing from the LOCUS line.
  * Added mutation type INT for applying GenomeDiffs to insert a sequence with annotations.
  * Fixed multiple identical GD entry error related to --user-evidence leading to
    double mutation predictions.
  * Changed error from loading reference genome files with repeat regions annotated
    with complex/multiple locations to a more informative warning.
  * Fixed major memory leak during the output step related to assigning read counts to
    JC evidence from BAM files. Rewrote to further improve performance by making access
    to the required files for this step persistent.
  * Added summary.json and output.vcf to the output directory (they are also present in the data directory).
  * Fixed --total-only mode for breseq BAM2COV to give expected output in --table mode.

Version 0.35.1
  * Fixed bug introduced in v0.35.0 that resulted in displaying an error message that
    "Coverage plot could not be generated" instead of the plot on MC evidence pages.
  * Added missing input file 'empty.fastq' needed for ./run_tests.sh.
  * Added FASTA output option to gdtools COMPARE/ANNOTATE. This will generate a
    multi-FASTA file with a genotype alignment suitable for building phylogenetic
    trees using parsimony methods. The content is equivalent to that of the PHYLIP
    output option, but without the length limitation on the genome names.
  * Added --use-version-as-seq-id option to breseq. If present, it will use the full
    VERSION in an input GenBank file (e.g., NC_001416.1) as the sequence ID instead of
    the LOCUS (e.g., NC_001416). You will need to use the converted reference file